3.4.2013 git
- heavy refactoring of utils.inc.php, splitting the file in several subfiles -> makes page loading much faster :-)
- extending export_project_execution.php to produce XML and HTML via XSLT (stylehseet added)
- docs: adding 3 FAQ question on project
- reorganizing links on main page
- raising next version to 1.6.0

2.4.2013 git
- initial revision for export_project_execution.php

28.3.2013 git
- implementing form to export a project as XML or HTML (available only to project managers and administrators)
- removing old deltasql google gadget code

27.3.2013 git
- doubling wideness of field title in tbscript (database version increased to 1.5.6)

5.3.2013 git
Migrating stuff from GPU server:
- added sql2xml and xslt utils by Darko Bunic
- added some utils to retrieve params and create unique ids 

4.1.2013 Patch 1 patch_1_add_module_to_project.zip
- removed strict index warning from Add Module to Project

*******************************
1.5.5 Release Notes (1.1.2013)

 Maintenance release: more deltasql fixes to work with PHP 5.3 (as XAMPP ships it by default now),
                      moving deltasql url from www.deltasql.org to deltasql.sourceforge.net
 
*******************************

7.12.2012 git
Patch 2: changing all URLs from www.deltasql.org to deltasql.sourceforge.net
- removal of Google Gadget as Google does not support them anymore

4.10.2012 git
Patch 1 released: edit_script bugfix for PHP 5.3 compatibility

*******************************
1.5.4 Release Notes (20.9.2012)

 Maintenance release: deltasql fixes to work with PHP 5.3 (as XAMPP ships it by default now).
 
*******************************

20.9.2012 git
- removed warnings when searching for scripts
- removed link to Changelog on www.deltasql.org as don't know if the website will stay up for how long...
- fixed problem in List Branches page for PHP 5.3

Patch 4 released (20.9.2012)
- backward compatibility to PHP 4.3 added

Patch 3 released (19.9.2012)